# hackerrank

challenges/algorithms/arrays_and_sorting/: counting_sort_1.c
challenges/algorithms/warmup/: chocolate_feast.c  gem_stones.c  halloween_party.c  is_fibo.c
contests/spotx/alice_and_bobs_silly_game/: CMakeLists.txt
contests/spotx/alice_and_bobs_silly_game/src/: main.cpp
contests/spotx/array_manipulation/: CMakeLists.txt
contests/spotx/array_manipulation/src/: main.cpp
contests/spotx/array_manipulation/tests/: run_tests.sh  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt
contests/spotx/common_child/: CMakeLists.txt
contests/spotx/common_child/src/: main.cpp
contests/spotx/common_child/test/: test1.txt  test10.txt  test2.txt  test3.txt  (+5 more)
contests/spotx/emas_supercomputer/: CMakeLists.txt
contests/spotx/emas_supercomputer/src/: main.cpp
contests/spotx/emas_supercomputer/test/: sample10.txt  test0.txt  test1.txt  test2.txt  test4.txt  test8.txt
contests/spotx/roads_and_libraries/: CMakeLists.txt  test_input.txt
contests/spotx/sam_and_substrings/: CMakeLists.txt
domains/algorithms/greedy/: max_min.c
domains/algorithms/implementation/: service_lane.c  sherlock_and_the_beast.c
domains/algorithms/sorting/: closest_numbers.c
domains/linux_shell/bash/: arithmetic_operations.sh  comparing_numbers.sh  compute_the_average.sh  functions_and_fractals.sh  getting_started_with_conditionals.sh  looping_and_skipping.sh  more_on_conditionals.sh  the_world_of_numbers.sh
domains/mathematics/fundamentals/: filling_jars.c  is_fibo.c
(+9 files in other folders)
